# tokecosmeticsproject

./: .gitattributes  .gitignore  README.md  docker-compose.dev.yml
backend/: .env.example  conftest.py  pyproject.toml
backend/apps/accounts/: admin.py  claims.py  managers.py  me_urls.py  models.py  serializers.py  tasks.py  urls.py  verification.py  views.py
backend/apps/carts/: factories.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/catalog/: admin.py  admin_serializers.py  admin_urls.py  admin_views.py  api_serializers.py  api_urls.py  api_views.py  apps.py  csv_io.py  factories.py  models.py  services.py  signals.py  tasks.py
backend/apps/checkout/: factories.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/core/: address_rules.py  country_context.py  middleware.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/delivery/: admin.py  factories.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/inventory/: admin_serializers.py  admin_urls.py  admin_views.py  apps.py  csv_io.py  factories.py  models.py  services.py  signals.py  tasks.py
backend/apps/newsletter/: admin.py  apps.py  models.py  serializers.py  tokens.py  urls.py  views.py
backend/apps/notifications/: send.py  tasks.py
backend/apps/orders/: admin_urls.py  emails.py  factories.py  invoice.py  models.py  numbers.py  serializers.py  services.py  state.py  tasks.py  tokens.py  urls.py  views.py
backend/apps/payments/: admin.py  admin_urls.py  apps.py  checks.py  factories.py  models.py  money.py  refunds.py  services.py  tasks.py  urls.py  views.py  views_webhooks.py
backend/apps/pricing/: models.py  services.py
backend/apps/reviews/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: celery.py  urls.py
(+438 files in other folders)
