[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django==5.2.*",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.3.4",
    "redis>=8.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "ruff>=0.15.21",
]
