[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.3.1",
    "django==5.2.*",
    "django-anymail[resend]>=15.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "django-filter>=26.1",
    "django-storages[s3]>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.30.0",
    "psycopg[binary]>=3.3.4",
    "pillow>=11.0",
    "redis>=8.0.1",
    "whitenoise>=6.12.0",
    "httpx>=0.28.1",
    "stripe>=15.3.1",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "respx>=0.23.1",
    "ruff>=0.15.21",
]
